cluster/apps/networking/traefik/zigberry/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zigberry-service
  namespace: networking
spec:
  type: ExternalName
  ports:
    - name: http
      port: 8080
  externalName: 192.168.1.78
