cluster/apps/networking/traefik/zigberry/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigberry-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zigberry.${SECRET_DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: zigberry-service
          port: 8080
      middlewares:
      - name: basic-auth
        namespace: networking
  tls:
    secretName: certsecret
